# pbddns

./: Cargo.toml  Changes.md  README.md  build.rs
.github/workflows/: ci.yml
contrib/freebsd/: pbddns.sh
src/: config.rs  main.rs  porkbun.rs
