[package]
name = "pbddns"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
cidr-utils = "0.6.1"
clap = { version = "4.3.11", features = ["derive"] }
dotenv = { version = "0.15.0" }
eyre = "0.6.8"
futures = "0.3.28"
interfaces = "0.0.9"
reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls", "cookies"], default-features = false }
serde = { version = "1.0.167", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = { version = "1.0.100", features = ["indexmap", "preserve_order"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
clap = "4.3.11"
clap_mangen = "0.2.13"
